# VeilPack

./: .gitignore  AGENTS.md  ASSUMPTIONS.md  AUDIT_REPORT.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  IDENTIFIED_ISSUES_TASK_LIST.md  IMPLEMENTATION_TODO.md  MANIFEST.sha256  PROGRESS.md  QUESTIONS_FOR_USER.md  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
checks/: CHECKS_INDEX.md  boundary_fitness.py  compatibility_matrix_check.py  generate_manifest.py  offline_enforcement.py  package_release_smoke.py  perf_baseline.json  perf_harness.py  release_artifact_smoke.py  ssot_validate.py
crates/veil-cli/: Cargo.toml
crates/veil-cli/src/: args.rs  artifact_processor.rs  error.rs  evidence_io.rs  extract_worker.rs  extract_worker_protocol.rs  fs_safety.rs  identity.rs  input_inventory.rs  logging.rs  main.rs  pack_finalize.rs  pack_verifier.rs  parallel.rs  run_bootstrap.rs  run_command.rs  runtime_limits.rs  verify_command.rs
crates/veil-cli/tests/: boundary_fitness.rs  cleanup_invariants.rs  cli_smoke.rs  compatibility_matrix.rs  contract_consistency.rs  contract_schema.rs  error_codes.rs  examples_additional_demos.rs  examples_csv_demo.rs  examples_pdf_demo.rs  limits_json.rs  offline_enforcement.rs  phase1_gates.rs  phase2_gates.rs  phase3_gates.rs  phase4_gates.rs  phase5_gates.rs
crates/veil-detect/: Cargo.toml
crates/veil-detect/src/: lib.rs  matching.rs
crates/veil-detect/tests/: detect_v1.rs
crates/veil-domain/: Cargo.toml
crates/veil-domain/src/: artifact.rs  config.rs  coverage.rs  errors.rs  hashing.rs  ids.rs  lib.rs  ordering.rs
crates/veil-evidence/: Cargo.toml
crates/veil-evidence/src/: ledger.rs  lib.rs  manifest.rs  ndjson.rs  schema.rs
crates/veil-extract/: Cargo.toml
crates/veil-extract/src/: archive.rs  canonical.rs  lib.rs  mail.rs  ooxml.rs
crates/veil-extract/tests/: extractors.rs  fuzz_smoke.rs
crates/veil-policy/: Cargo.toml
crates/veil-policy-eval/: Cargo.toml
crates/veil-policy-eval/src/: lib.rs
crates/veil-policy/src/: bundle_id.rs  lib.rs
crates/veil-policy/tests/: policy_bundle_id.rs
crates/veil-transform/: Cargo.toml
crates/veil-transform/src/: lib.rs
crates/veil-verify/: Cargo.toml
crates/veil-verify/src/: lib.rs
docs/: compatibility-matrix.md  error-codes.md  operator-guide.md
examples/: README.md
examples/archive-redaction/: README.md
examples/archive-redaction/expected/: sample.sanitized.ndjson
examples/archive-redaction/policy/: policy.json
examples/archive-redaction/source/: notes.txt
examples/csv-redaction/: README.md
examples/csv-redaction/expected/: customers.sanitized.csv
examples/csv-redaction/input/: customers.csv
examples/csv-redaction/policy/: policy.json
examples/email-redaction/: README.md
examples/email-redaction/expected/: sample.sanitized.ndjson
examples/email-redaction/input/: sample.eml
examples/pdf-redaction/: README.md  limits.json
examples/pdf-redaction/expected/: invoice.sanitized.ndjson
scripts/: enforce_github_protection.py  package_release.py
spec/: 00_PROJECT_FINGERPRINT.md  01_SCOPE.md  02_ARCHITECTURE.md  03_DOMAIN_MODEL.md  04_INTERFACES_AND_CONTRACTS.md  05_DATASTORE_AND_MIGRATIONS.md  06_SECURITY_AND_THREAT_MODEL.md  07_RELIABILITY_AND_OPERATIONS.md  08_OBSERVABILITY.md  09_TEST_STRATEGY.md  10_PHASES_AND_TASKS.md  11_QUALITY_GATES.md  12_RUNBOOK.md
templates/: PR_REVIEW_CHECKLIST.md  SESSION_PROTOCOL.md
