[package]
name = "veil-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
veil-domain = { path = "../veil-domain" }
veil-evidence = { path = "../veil-evidence" }
veil-policy = { path = "../veil-policy" }

[[bin]]
name = "veil"
path = "src/main.rs"
