[package]
name = "veil-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
zeroize = "1"
veil-domain = { path = "../veil-domain" }
veil-detect = { path = "../veil-detect" }
veil-evidence = { path = "../veil-evidence" }
veil-extract = { path = "../veil-extract" }
veil-policy = { path = "../veil-policy" }
veil-transform = { path = "../veil-transform" }
veil-verify = { path = "../veil-verify" }

[dev-dependencies]
base64 = "0.22"
tar = "0.4"
wait-timeout = "0.2"
zip = "0.6"

[[bin]]
name = "veil"
path = "src/main.rs"
