[package]
name = "veil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
zeroize.workspace = true
veil-domain.workspace = true
veil-detect.workspace = true
veil-evidence.workspace = true
veil-extract.workspace = true
veil-policy.workspace = true
veil-transform.workspace = true
veil-verify.workspace = true

# Phase 0: workspace deps loaded but not yet wired.
# Subsequent phases will start consuming these.
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
wait-timeout = { workspace = true }
crossbeam-channel = { workspace = true }
ciborium = { workspace = true }

[dev-dependencies]
base64.workspace = true
tar.workspace = true
zip.workspace = true

[[bin]]
name = "veil"
path = "src/main.rs"

[lints]
workspace = true
