[package]
name = "veil-detect"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
veil-domain.workspace = true
veil-extract.workspace = true
veil-policy.workspace = true
veil-policy-eval.workspace = true
blake3.workspace = true
serde_json.workspace = true

[dev-dependencies]
regex.workspace = true

[lints]
workspace = true
