[package]
name = "veil-evidence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
veil-domain.workspace = true
veil-verify.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
