[package]
name = "veil-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
veil-domain.workspace = true
csv.workspace = true
serde_json.workspace = true
tar.workspace = true
zip.workspace = true
mailparse.workspace = true

[lints]
workspace = true
