[package]
name = "veil-policy-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
veil-extract.workspace = true
veil-policy.workspace = true
serde_json.workspace = true

[dev-dependencies]
regex.workspace = true
veil-domain.workspace = true

[lints]
workspace = true
